--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div id="box4">區域 4</div>
     <div id="box5">區域 5</div>
 
+    <div id="back-to-top" data-goto-target="#top" data-goto-duration="1000">^</div>
+
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./go.js"></script>
